--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon --exec babel-node index.js",
-    "build": "nodemon --exec babel-node index.js"
+    "start": "NODE_ENV=production babel-node --presets es2015 index.js"
   },
   "keywords": [],
   "author": "",
