--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
     "basic-auth": "^2.0.1",
     "compression": "^1.7.4",
     "express": "^4.17.2",
@@ -21,9 +23,7 @@
     "passport-jwt": "^4.0.0",
     "pg": "^8.7.1",
     "pg-hstore": "^2.3.4",
-    "sequelize": "^6.14.0",
-    "babel-cli": "^6.26.0",
-    "babel-preset-es2015": "^6.24.1",
-    "rimraf": "^3.0.2"
+    "rimraf": "^3.0.2",
+    "sequelize": "^6.14.0"
   }
 }
